--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
 <body>
 
   <!-- HERO SECTION -->
-  <section>
+  <section class="hero">
     <h1>RECURY</h1>
 
     <h2>All your subscriptions in one place</h2>
