--- a/frontend/tracking.html
+++ b/frontend/tracking.html
@@ -6,163 +6,72 @@
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter&family=Unna&family=Libre+Caslon+Display&family=Anonymous+Pro&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
 
-  <style>
-    /* RESET */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      min-height: 100vh;
-      background: #000;
-      font-family: "Inter", sans-serif;
-      color: #fff;
-    }
-
-    .logo {
-      position: absolute;
-      top: 40px;
-      left: 60px;
-      font-family: "Libre Caslon Display", serif;
-      letter-spacing: 2px;
-      font-size: 22px;
-    }
-
-    .container {
-      max-width: 1000px;
-      margin: 0 auto;
-      padding: 140px 40px 80px;
-      text-align: center;
-    }
-
-    h1 {
-      font-family: "Unna", serif;
-      font-size: 34px;
-      margin-bottom: 12px;
-      letter-spacing: 1px;
-    }
-
-    .subtitle {
-      font-size: 14px;
-      opacity: 0.7;
-      margin-bottom: 48px;
-    }
-
-    .content {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 60px;
-      align-items: center;
-      margin-bottom: 60px;
-    }
-
-    /* PIE CHART PLACEHOLDER */
-    .chart {
-      width: 300px;
-      height: 300px;
-      border-radius: 50%;
-      background: radial-gradient(circle at center, #1a1a1a, #000);
-      margin: 0 auto;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 12px;
-      opacity: 0.6;
-    }
-
-    /* LIST */
-    .breakdown {
-      display: flex;
-      flex-direction: column;
-      gap: 18px;
-      text-align: left;
-    }
-
-    .item {
-      background: linear-gradient(180deg, #141414 0%, #2F2F2F 100%);
-      border-radius: 14px;
-      padding: 14px 20px;
-      display: flex;
-      justify-content: space-between;
-      font-size: 14px;
-    }
-
-    .name {
-      font-family: "Unna", serif;
-      letter-spacing: 0.5px;
-    }
-
-    .percent {
-      font-family: "Anonymous Pro", monospace;
-    }
-
-    .btn {
-      display: inline-block;
-      padding: 14px 36px;
-      border-radius: 12px;
-      background: linear-gradient(180deg, #C9A66B 0%, #9E7C3E 100%);
-      color: #000;
-      font-family: "Anonymous Pro", monospace;
-      font-size: 14px;
-      letter-spacing: 1px;
-      text-decoration: none;
-    }
-  </style>
+  <!-- Chart.js -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
 
-  <div class="logo">RECURY</div>
+<div class="center-page">
+  <div class="card wide">
 
-  <div class="container">
-    <h1>TRACK SPENDING</h1>
-    <p class="subtitle">
-      See how your money is distributed across subscriptions.
-    </p>
+    <h1 class="logo">RECURY</h1>
 
-    <div class="content">
+    <h2>Track Spending</h2>
+    <p class="muted">Your subscription spending breakdown</p>
 
-      <!-- PIE CHART (DATA FROM BACKEND LATER) -->
-      <div class="chart">
-        Pie chart<br />renders here
-      </div>
+    <canvas id="spendingChart" width="400" height="400"></canvas>
 
-      <!-- BREAKDOWN LIST (DYNAMIC) -->
-      <div class="breakdown">
+    <a href="dashboard.html" class="btn full-btn">BACK TO DASHBOARD</a>
 
-        <!-- ONE ITEM (REPEATS FROM BACKEND DATA) -->
-        <div class="item">
-          <span class="name">NETFLIX</span>
-          <span class="percent">45%</span>
-        </div>
-
-        <div class="item">
-          <span class="name">SPOTIFY</span>
-          <span class="percent">25%</span>
-        </div>
-
-        <div class="item">
-          <span class="name">CULT</span>
-          <span class="percent">20%</span>
-        </div>
-
-        <div class="item">
-          <span class="name">ZEE TV</span>
-          <span class="percent">10%</span>
-        </div>
-
-        <!-- MORE ITEMS FROM BACKEND -->
-
-      </div>
-    </div>
-
-    <!-- BACK -->
-    <a href="dashboard.html" class="btn">
-      BACK TO DASHBOARD
-    </a>
   </div>
+</div>
+
+<script>
+  fetch("http://localhost:8080/payments/spending")
+    .then(res => res.json())
+    .then(data => {
+      const labels = Object.keys(data);
+      const values = Object.values(data);
+
+      const ctx = document.getElementById("spendingChart").getContext("2d");
+
+      new Chart(ctx, {
+        type: "pie",
+        data: {
+          labels: labels,
+          datasets: [{
+            data: values,
+            backgroundColor: [
+              "#E6C27A",  // soft gold
+              "#C9A66B",  // primary gold (your main)
+              "#9E7C3E",  // deep gold
+              "#7A5F2E",  // bronze gold
+              "#5A461F"   // dark antique gold
+            ],
+            borderWidth: 0
+          }]
+        },
+        options: {
+          plugins: {
+            legend: {
+              labels: {
+                color: "#ffffff",
+                font: {
+                  family: "Inter",
+                  size: 12
+                }
+              }
+            }
+          }
+        }
+      });
+    })
+    .catch(err => {
+      console.error("Error loading spending data", err);
+    });
+</script>
 
 </body>
 </html>
